style: Fix pre wrap for mobile.

--- a/assets/css/_ui.styl
+++ b/assets/css/_ui.styl
@@ -41,4 +41,5 @@ a.ui-link
 pre.code
   color: $green
   line-height: 25px
+  white-space: pre-wrap
   font-family: monospace
